Apply suggestions from code review
Co-authored-by: Leonard Ehrenfried <mail@leonard.io>