@@ -15,7 +15,7 @@ public class ListUtils {
    * null or empty.
    */
   public static <T> T first(List<T> list) {
-    return list == null || list.isEmpty() ? null : list.get(0);
+    return list == null || list.isEmpty() ? null : list.getFirst();
   }
 
   /**
@@ -23,7 +23,7 @@ public class ListUtils {
    * null or empty.
    */
   public static <T> T last(List<T> list) {
-    return list == null || list.isEmpty() ? null : list.get(list.size() - 1);
+    return list == null || list.isEmpty() ? null : list.getLast();
   }
 
   /**
